fix scrollbar

--- a/styles.css
+++ b/styles.css
@@ -220,7 +220,7 @@ html {
 
 /* Custom scrollbar styles */
 .new-info-content::-webkit-scrollbar {
-    width: 8; /* Width of the scrollbar */
+    width: 8px; /* Width of the scrollbar */
 }
 
 .new-info-content::-webkit-scrollbar-track {
